# ion

./: .gitignore  Cargo.toml  Makefile  README.md  build.sh  ion.cfg
src/: config.rs  logger.rs  main.rs  menu.rs  pmm.rs
src/protocols/: mod.rs  stivale2.rs
test/stivale2/: Cargo.toml  Makefile  kernel.c  linker.ld  stivale2.h  x86_64-unknown.json
test/stivale2/.cargo/: config.toml  kernel.ld
test/stivale2/src/: main.rs
