[package]
name = "ion"
version = "0.1.0"
edition = "2018"

[dependencies]
log = "0.4.14"
spin = "0.9.2"
uart_16550 = "0.2.15"
bit_field = "0.10.1"
xmas-elf = "0.8.0"
raw-cpuid = "10.2.0"
stivale-boot = { path = "../stivale" }
x86_64 = "0.14.4"

[dependencies.uefi]
version = "0.11.0"
features = ["alloc"]

[dependencies.font8x8]
version = "0.2.5"
default-features = false
features = ["unicode"]
